@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
 #
 
+2004-10-24 01:37:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-112
+
+    Summary:
+      Added some IO and network utilities
+    Revision:
+      missingh--head--1.0--patch-112
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/IO.hs libsrc/MissingH/Network.hs
+
+
 2004-10-23 22:54:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-111
 
     Summary:
